# OOP_learning

Constructor/: Makefile  lib.cpp  lib.h  main.cpp  mymain  myprogram
DaHinh/: CMakeLists.txt
DaHinh/lib/: CongTy.h  NVQuanLy.h  NVSanXuat.h  NVVanPhong.h  NhanVien.h
DaHinh/src/: CongTy.cpp  NVQuanLy.cpp  NVVanPhong.cpp  NhanVien.cpp  main.cpp
Kethua/: CMakeLists.txt
Kethua/lib/: CongTy.h  NVQuanLy.h  NVSanXuat.h  NVVanPhong.h  NhanVien.h
Kethua/src/: CongTy.cpp  NVSanXuat.cpp  NhanVien.cpp  main.cpp
NangCao/: Template.cc  main
NangCao/NgoaiLe/: NgoaiLe.cc  main
Static/: main  main.cc  test  test.cc
Test/: main  main.c
ThamChieu/: main  main.cc
This_Pointer/: Makefile  lib.cpp  lib.h  main  main.cpp
